--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">matarak</string>
+    <string name="matarak">Matarak</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="Login">Login</string>
+    <string name="belum_punya_akun">Dont have an account?</string>
+    <string name="registration">Registration</string>
+    <string name="sudah_punya_akun">already have an account?</string>
+    <string name="fullName">Fullname</string>
+    <string name="Username">Username</string>
+    <string name="title">Title</string>
+    <string name="content">Isi artikel lorem ipsum bla bla bl a hehehehehehe apalagi yaa....</string>
+    <string name="latest_articles">Latest Articles</string>
 </resources>
