--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,11 @@
     <string name="title">Title</string>
     <string name="content">Isi artikel lorem ipsum bla bla bl a hehehehehehe apalagi yaa....</string>
     <string name="latest_articles">Latest Articles</string>
+    <string name="home">Home</string>
+    <string name="hospital">Hospital</string>
+    <string name="history">History</string>
+    <string name="profile">Profile</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="open_camera">open camera</string>
 </resources>
