--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="open_camera">open camera</string>
+    <string name="image_from_history">image from history</string>
     <string-array name="gender">
         <item>Male</item>
         <item>Female</item>
