--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="hospital">Hospital</string>
     <string name="history">History</string>
     <string name="profile">Profile</string>
+    <string name="failed_to_connect">Failed to connect</string>
+    <string name="retry">Retry</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="open_camera">open camera</string>
