22 - change icon app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">matarak</string>
+    <string name="app_name">Matarak</string>
     <string name="matarak">Matarak</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
